# ScreenWriter

./: .gitignore  LICENSE  Makefile  README.md  compile.bat  config.env.example  config.py  main.py  out.docx  pyproject.toml  requirements.txt  settings.toml
app/: __init__.py  app.py  documents.py  exceptions.py  keyboard.py  logic.py  settings.py
app/cli/: __init__.py  app.py  cli.py  menus.py  msgs.py  printers.py  theme.py  view.py
app/utils/: cli.py  clipboard.py  settings.py
scripts/: build.bat  extrans.bat  extrans.py
src/: __main__.py  arguments.py  context.py  core.py  events.py  logging.py  settings.py
src/cli/: cli.py
src/cli/l18n/: translate.py
src/core/: __init__.py  components.py  config.py  core.py  events.py  managers.py  schemas.py  styles.py  types.py  utils.py
src/core/documents/: types.py
src/core/ui/: __init__.py  enums.py  factories.py  types.py
src/document/: __init__.py  enums.py  exceptions.py  managers.py
src/l18n/: __init__.py  messages.py  translate.py
src/utils/: cli.py  clipboard.py  keyboard.py  observer.py
src/utils/arguments/: parsers.py
src/utils/cli/: __init__.py  constants.py  prints.py  styles.py  types.py  utils.py
src/utils/clipboard/: __init__.py  image.py  text.py
src/utils/clsutils/: __init__.py  generators.py
src/utils/events/: __init__.py  channels.py  events.py  types.py
src/utils/keyboard/: __init__.py  managers.py  types.py
src/utils/settings/: __init__.py  enums.py  exceptions.py  loaders.py  settings.py  types.py  utils.py
src/utils/threads/: __init__.py  decorators.py
(+2 files in other folders)
