[tool.poetry]
name = "screenwriter"
version = "0.0.3"
description = "ScreenWriter is a simple util that makes your daily life at university easier."
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
translatable-enums = "^0.0.3"
python-docx = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
